# gitstar

./: .env  .gitignore  Config.hs  Controllers.hs  Gitstar.hs  Layouts.hs  Main.hs  Models.hs  Procfile  SSHServer.hs  Utils.hs  Views.hs  database.conf  gitstar.cabal  hails.hs
Controllers/: Apps.hs  Keys.hs  Projects.hs  Repo.hs  Repos.hs  Users.hs  Welcome.hs
Gitstar/: Repo.hs
Gitstar/Repo/: Types.hs
Hails/Web/: REST.hs  Router.hs
Policy/: .Gitstar.hs.swp  Gitstar.hs
Views/: Apps.hs  Keys.hs  Projects.hs  Users.hs  Welcome.hs
static/: index.html
static/css/: application.css  bootstrap.css  gh-buttons.css  home.css
static/js/: application.js  flash.js
