Name:           gitstar
Version:        0.1.3
build-type:     Simple
License:        GPL-2
License-File:   LICENSE
Author:         HAils team
Maintainer:     Hails team <hails at scs.stanford dot edu>
Stability:      experimental
Synopsis:       Simple GitStar project manager
Category:       Web
Cabal-Version:  >= 1.6

Description:
        GitStar project manager app

X-Hails-Server: Gitstar

Executable gitstar-manager
  Main-is: Main.hs
  ghc-options: -package ghc -Wall -fno-warn-orphans -fno-warn-unused-do-bind
  Build-Depends: base <6
               , gitstar-policy
               , hails
               , lio
               , containers
               , bytestring
               , binary
               , bson
               , transformers
               , base64-bytestring
               , filepath
               , http-types
               , aeson
               , text
               , blaze-html
               , warp
               , wai-extra

